# TheAbsenceEngine

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Docs/: architecture.md  live_status.md  plan.md
backend/: .env.example  Dockerfile  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 73fcb2fcb877_create_documents_table.py  a1b2c3d4e5f6_create_users_table.py  b2c3d4e5f6a7_create_analysis_jobs_table.py  c3d4e5f6a7b8_create_report_and_items_tables.py  d4e5f6a7b8c9_create_custom_schemas_table.py  e5f6a7b8c9d0_add_timestamps_to_analysis_jobs.py
backend/app/: config.py  dependencies.py  main.py
backend/app/engine/: assembler.py  chunker.py  classifier.py  embedder.py  orchestrator.py
backend/app/models/: absence_item.py  absence_report.py  analysis_job.py  base.py  custom_schema.py  document.py  user.py
backend/app/routes/: __init__.py  analysis.py  auth.py  documents.py  health.py  reports.py  schemas.py
backend/app/schemas/: analysis.py  auth.py  custom_schema.py  document.py  report.py
backend/app/services/: analysis_service.py  auth_service.py  document_service.py  report_service.py  schema_service.py
backend/app/shared/: db.py  errors.py  inline_queue.py  logger.py  middleware.py  pagination.py  rate_limiter.py  security.py  storage.py  validators.py
backend/tests/: conftest.py
backend/tests/integration/: test_analysis_flow.py  test_auth_flow.py  test_document_flow.py  test_rate_limiting.py
backend/worker/: settings.py  tasks.py
frontend/: next.config.ts  package-lock.json
frontend/src/app/: globals.css  (+3 more)
(+68 files in other folders)
