[project]
name = "theabsenceengine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.8.0",
    "email-validator>=2.3.0",
    "python-multipart>=0.0.18",
    # Auth / security
    "argon2-cffi>=25.1.0",
    "pyjwt>=2.11.0",
    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Task queue / cache
    "arq>=0.26.0",
    "redis>=5.2.0",
    # File storage
    "boto3>=1.35.0",
    "aiobotocore>=2.15.0",
    "aiofiles>=24.1.0",
    # Document parsing
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-magic-bin>=0.4.14; sys_platform == 'win32'",
    "python-magic>=0.4.27; sys_platform != 'win32'",
    # LLM clients
    "google-genai>=1.5.0",
    "openai>=1.70.0",
    "anthropic>=0.49.0",
    # Resilience
    "tenacity>=9.0.0",
    "circuitbreaker>=2.0.0",
    # Utilities
    "pyyaml>=6.0.2",
    "httpx>=0.28.1",
    # Testing
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["backend"]
testpaths = ["backend/tests"]

